tests/lean/fun.lean.expected.out
fun.lean:2:23-2:26: error: unexpected type ascription
