tests/lean/fun.lean
-- reject to avoid confusion with `fun x : Nat =>`
#check fun (x : Nat) : Nat => x
